[package]
name = "memberlist"
version = "0.9.0"
edition.workspace = true
license.workspace = true
description = "Sans-I/O memberlist: a Rust implementation of the SWIM gossip membership protocol."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
memberlist-proto = { workspace = true, default-features = false }
memberlist-reactor = { workspace = true, optional = true }
memberlist-compio = { workspace = true, optional = true }
memberlist-smoltcp = { workspace = true, optional = true }
memberlist-embassy = { workspace = true, optional = true }
memberlist-embedded = { workspace = true, optional = true }
agnostic = { workspace = true, optional = true }

[dev-dependencies]
rcgen = "0.14"
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
quinn-proto = { version = "0.11", features = ["rustls-ring"] }
smol_str.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "smoke"
required-features = ["tokio", "quic-rustls-ring"]

[features]
default = ["tokio", "tcp"]
alloc = ["memberlist-proto/alloc"]
std = ["alloc", "memberlist-proto/std"]

# Config-options serde + clap, propagated to proto + whichever std drivers are
# enabled. std-only (clap is std-only; the `Duration` fields use humantime-serde).
# The no_std drivers (smoltcp / embassy / embedded) are intentionally excluded.
serde = [
  "std",
  "memberlist-proto/serde",
  "memberlist-reactor?/serde",
  "memberlist-compio?/serde",
]
clap = [
  "std",
  "memberlist-proto/clap",
  "memberlist-reactor?/clap",
  "memberlist-compio?/clap",
]

# driver selection
reactor = ["dep:memberlist-reactor", "std"]
tokio = [
  "reactor",
  "dep:agnostic",
  "agnostic/tokio",
  "memberlist-reactor/tokio",
]
smol = ["reactor", "dep:agnostic", "agnostic/smol", "memberlist-reactor/smol"]
compio = ["dep:memberlist-compio", "std"]
# bare-metal / no_std drivers: `alloc` tier (they never pull `std` here)
smoltcp = ["dep:memberlist-smoltcp", "alloc", "memberlist-smoltcp/alloc"]
embassy = ["dep:memberlist-embassy", "alloc", "memberlist-embassy/alloc"]
embedded = ["dep:memberlist-embedded", "alloc", "memberlist-embedded/alloc"]

# transports (kept prefix) — only drivers that DEFINE the feature.
#
# Bare `tls` / `quic` enable the record-layer TYPES only; they do not pick a
# crypto provider, so a build with just `tls` (or `quic`) has no usable backend.
# Always select a backend feature instead — `tls-rustls-ring` /
# `quic-rustls-ring` (or the `-aws-lc-rs` variants) — which turn on `tls` / `quic`
# transitively. The checksum (`crc32`, `xxhash*`, `murmur3`) and compression
# (`lz4`, `snappy`, `zstd`, `brotli`) features below are each self-contained.
tcp = [
  "memberlist-proto/tcp",
  "memberlist-reactor?/tcp",
  "memberlist-compio?/tcp",
]
tls = ["memberlist-proto/tls", "memberlist-reactor?/tls"]
tls-rustls-ring = [
  "tls",
  "memberlist-proto/tls-rustls-ring",
  "memberlist-reactor?/tls-rustls-ring",
  "memberlist-compio?/tls-rustls-ring",
]
tls-rustls-aws-lc-rs = [
  "tls",
  "memberlist-proto/tls-rustls-aws-lc-rs",
  "memberlist-reactor?/tls-rustls-aws-lc-rs",
  "memberlist-compio?/tls-rustls-aws-lc-rs",
]
quic = [
  "memberlist-proto/quic",
  "memberlist-reactor?/quic",
  "memberlist-compio?/quic",
]
quic-rustls-ring = [
  "quic",
  "memberlist-proto/quic-rustls-ring",
  "memberlist-reactor?/quic-rustls-ring",
  "memberlist-compio?/quic-rustls-ring",
]
quic-rustls-aws-lc-rs = [
  "quic",
  "memberlist-proto/quic-rustls-aws-lc-rs",
  "memberlist-reactor?/quic-rustls-aws-lc-rs",
  "memberlist-compio?/quic-rustls-aws-lc-rs",
]

# compression (DE-prefixed) — every driver + proto define these
lz4 = [
  "memberlist-proto/lz4",
  "memberlist-reactor?/lz4",
  "memberlist-compio?/lz4",
  "memberlist-smoltcp?/lz4",
  "memberlist-embassy?/lz4",
  "memberlist-embedded?/lz4",
]
snappy = [
  "memberlist-proto/snappy",
  "memberlist-reactor?/snappy",
  "memberlist-compio?/snappy",
  "memberlist-smoltcp?/snappy",
  "memberlist-embassy?/snappy",
  "memberlist-embedded?/snappy",
]
zstd = [
  "memberlist-proto/zstd",
  "memberlist-reactor?/zstd",
  "memberlist-compio?/zstd",
  "memberlist-smoltcp?/zstd",
  "memberlist-embassy?/zstd",
  "memberlist-embedded?/zstd",
]
brotli = [
  "memberlist-proto/brotli",
  "memberlist-reactor?/brotli",
  "memberlist-compio?/brotli",
  "memberlist-smoltcp?/brotli",
  "memberlist-embassy?/brotli",
  "memberlist-embedded?/brotli",
]

# encryption (DE-prefixed) — every driver + proto define these
aes-gcm = [
  "memberlist-proto/aes-gcm",
  "memberlist-reactor?/aes-gcm",
  "memberlist-compio?/aes-gcm",
  "memberlist-smoltcp?/aes-gcm",
  "memberlist-embassy?/aes-gcm",
  "memberlist-embedded?/aes-gcm",
]
chacha20-poly1305 = [
  "memberlist-proto/chacha20-poly1305",
  "memberlist-reactor?/chacha20-poly1305",
  "memberlist-compio?/chacha20-poly1305",
  "memberlist-smoltcp?/chacha20-poly1305",
  "memberlist-embassy?/chacha20-poly1305",
  "memberlist-embedded?/chacha20-poly1305",
]

# checksum (gossip-plane only; DE-prefixed) — every driver + proto define these
crc32 = [
  "memberlist-proto/crc32",
  "memberlist-reactor?/crc32",
  "memberlist-compio?/crc32",
  "memberlist-smoltcp?/crc32",
  "memberlist-embassy?/crc32",
  "memberlist-embedded?/crc32",
]
xxhash32 = [
  "memberlist-proto/xxhash32",
  "memberlist-reactor?/xxhash32",
  "memberlist-compio?/xxhash32",
  "memberlist-smoltcp?/xxhash32",
  "memberlist-embassy?/xxhash32",
  "memberlist-embedded?/xxhash32",
]
xxhash64 = [
  "memberlist-proto/xxhash64",
  "memberlist-reactor?/xxhash64",
  "memberlist-compio?/xxhash64",
  "memberlist-smoltcp?/xxhash64",
  "memberlist-embassy?/xxhash64",
  "memberlist-embedded?/xxhash64",
]
xxhash3 = [
  "memberlist-proto/xxhash3",
  "memberlist-reactor?/xxhash3",
  "memberlist-compio?/xxhash3",
  "memberlist-smoltcp?/xxhash3",
  "memberlist-embassy?/xxhash3",
  "memberlist-embedded?/xxhash3",
]
murmur3 = [
  "memberlist-proto/murmur3",
  "memberlist-reactor?/murmur3",
  "memberlist-compio?/murmur3",
  "memberlist-smoltcp?/murmur3",
  "memberlist-embassy?/murmur3",
  "memberlist-embedded?/murmur3",
]

# CIDR peer-admission allow-list. std-only, so it forwards to the std drivers
# (reactor / compio) but not the no_std ones (smoltcp / embassy / embedded).
cidr = [
  "memberlist-proto/cidr",
  "memberlist-reactor?/cidr",
  "memberlist-compio?/cidr",
]

# misc
dns = ["memberlist-reactor?/dns", "memberlist-compio?/dns"]
# Auto-detect the advertise address from the host's own interfaces (std drivers only).
getifs = ["memberlist-reactor?/getifs", "memberlist-compio?/getifs"]
tracing = [
  "memberlist-proto/tracing",
  "memberlist-reactor?/tracing",
  "memberlist-compio?/tracing",
]
