[package]
edition = "2021"
name = "showbiz-nodejs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.11", default-features = false, features = ["napi6"] }
napi-derive = "2.11"
showbiz-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
