[package]
name = "showbiz-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "showbiz"
crate-type = ["cdylib"]

[dependencies]
ipnet = "2.7"
viewit = { workspace = true }
pyo3 = "0.18.3"
showbiz-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
