[package]
name = "showbiz-wasm"
version = "0.0.0"
edition = "2021"

[features]
default = ["async", "metrics"]
async = ["showbiz-core/async"]
metrics = ["showbiz-core/metrics"]


[dependencies]
wasm-agnostic = { path = "../../agnostic/wasm-agnostic" }
showbiz-core = { path = "../core" }

[dev-dependencies]
tokio = { version = "=1.24.2", features = ["full"] }
showbiz-core = { path = "../core", features = ["test"] }

[patch.crates-io]
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.7" }
libc = { git = "https://github.com/wasix-org/libc.git" }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.24.2" }