[package]
name = "showbiz"
version = "0.0.0"
edition = "2021"

[features]
default = ["async", "metrics"]
async = ["showbiz-core/async"]
metrics = ["showbiz-core/metrics"]

tokio = ["agnostic/tokio-net"]

async-std = ["agnostic/async-std-net"]

smol = ["agnostic/smol-net"]

[dependencies]
agnostic = { workspace = true }
showbiz-core = { workspace = true }
