[package]
name = "showbiz-traits"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
version = { workspace= true }
edition = { workspace= true }

[features]
default = ["async"]
async = ["async-trait", "async-channel"]
sync = ["crossbeam-channel"]

tokio = ["dep:tokio", "async"]
async-std = ["dep:async-std", "async"]
smol = ["dep:smol", "async", "futures-util"]

[dependencies]
async-trait = { version = "0.1", optional = true }
async-channel = { version = "1.8", optional = true }

crossbeam-channel = { version = "0.5", optional = true }

tokio = { version = "1.28", optional = true, default-features = false, features = ["net", "time", "io-util"] }

async-std = { version = "1.12", optional = true }

smol = { version = "1.3", optional = true, default-features = false }
futures-util = { version = "0.3", optional = true }

bytes = "1.4"
showbiz-types = { path = "../types" }