[package]
name = "showbiz-traits"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
version = { workspace= true }
edition = { workspace= true }

[features]
default = ["async"]
async = ["async-trait", "async-channel", "futures-util"]
sync = ["crossbeam-channel"]

tokio = ["dep:tokio", "async", "tokio-util", "tokio/net"]
tokio_wasi = ["dep:tokio", "wasi_tokio/net", "async", "tokio-util"]
async-std = ["dep:async-std", "async", "async-io"]
smol = ["dep:smol", "async"]

[dependencies]
async-io = { version = "1.12", optional = true }
async-trait = { version = "0.1", optional = true }
async-channel = { version = "1.8", optional = true }
tokio = { version = "1.28", optional = true, default-features = false, features = ["time", "io-util"] }
trust-dns-proto = { workspace = true }

wasi_tokio = { package = "tokio_wasi", version = "1.25", default-features = false, features = ["net"], optional = true }

futures-timer = { version = "3", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

tokio-util = { version = "0.7", optional = true, default-features = false, features = ["compat"] }
async-std = { version = "1.12", optional = true }

smol = { version = "1.3", optional = true, default-features = false }
futures-util = { version = "0.3", optional = true, features = ["io"] }

bytes = "1.4"