[package]
name = "showbiz-transport"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
version = { workspace= true }
edition = { workspace= true }

[features]
default = ["async"]

sync = ["crossbeam-channel", "showbiz-traits/sync"]
async = ["showbiz-traits/async", "async-channel"]

tokio = ["dep:tokio", "showbiz-traits/tokio", "async"]
async-std = ["dep:async-std", "showbiz-traits/async-std", "async", "futures-util"]
smol = ["dep:smol", "showbiz-traits/smol", "async", "futures-util"]

[dependencies]

# sync
crossbeam-channel = { version = "0.5", optional = true }

# tokio
tokio = { version = "1.26", features = ["macros", "net", "io-std", "io-util", "time", "rt"], default-features = false, optional = true }

# smol
smol = { version = "1.3", optional = true }

# async-std
async-std = { version = "1.12", features = ["attributes"], optional = true }

# async common
async-channel = { version = "1.8", optional = true }
futures-util = { version = "0.3", optional = true }

# common
bytes = { workspace = true, features = ["serde"] }
crossbeam-utils = "0.8"
either = { workspace = true }
local-ip-address = { workspace = true }
scopeguard = { workspace = true }
serde = { version = "1", features = ["derive"] }
socket2 = { workspace = true }
showbiz-types = { path = "../types" }
showbiz-traits = { path = "../traits", default-features = false }
thiserror = "1"
tracing = { workspace = true }
viewit = { workspace = true }
wg = "0.3"
