[package]
name = "showbiz-transport"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
version = { workspace= true }
edition = { workspace= true }

[features]
default = ["async"]

sync = ["crossbeam-channel", "showbiz-traits/sync"]
async = ["showbiz-traits/async", "async-channel", "futures-util"]

tokio = ["dep:tokio", "showbiz-traits/tokio", "async", "tokio/net"]
tokio_wasi = ["dep:tokio_wasi", "dep:tokio", "async"]
async-std = ["dep:async-std", "showbiz-traits/async-std", "async", "futures-util"]
smol = ["dep:smol", "showbiz-traits/smol", "async", "futures-util"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_wasi = { version = "1.25", default-features = false, features = ["net"], optional = true }
gloo-timers = { version = "0.2", optional = true, features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.28", optional = true, default-features = false, features = ["time", "io-util"] }
async-io = { version = "1.12", optional = true }
socket2 = "0.5"
local-ip-address = { workspace = true }

[dependencies]

# sync
crossbeam-channel = { version = "0.5", optional = true }

# tokio
tokio = { version = "1.26", features = ["macros", "io-util", "time", "rt"], default-features = false, optional = true }

# smol
smol = { version = "1.3", optional = true }

# async-std
async-std = { version = "1.12", features = ["attributes", "std"], default-features = false, optional = true }

# async common
async-channel = { version = "1.8", optional = true }
futures-util = { version = "0.3", optional = true }

# common
bytes = { workspace = true, features = ["serde"] }
crossbeam-utils = "0.8"
either = { workspace = true }
scopeguard = { workspace = true }
serde = { version = "1", features = ["derive"] }
showbiz-types = { path = "../types" }
showbiz-traits = { path = "../traits", default-features = false }
thiserror = "1"
tracing = { workspace = true }
viewit = { workspace = true }
wg = "0.3"
