[package]
name = "showbiz-transport"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
version = { workspace= true }
edition = { workspace= true }

[features]
default = ["async"]

# TODO: temporarily disable nightly, wait Rust's issue https://github.com/rust-lang/rust/issues/111105 to be fixed
# nightly = ["agnostic/nightly", "showbiz-core/nightly"]

async = ["showbiz-core/async", "agnostic"]

tokio-compat = ["agnostic/tokio-compat"]

metrics = ["showbiz-core/metrics"]

[dependencies]
# async common
agnostic = { workspace = true, optional = true, features = ["net"] }

# common
bytes = { workspace = true, features = ["serde"] }
crc32fast = { version = "1.3" }
local-ip-address = "0.5"
showbiz-core = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
thiserror = "1"
tracing = { workspace = true }
viewit = { workspace = true }
wg = "0.3"
