[package]
name = "showbiz-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
serde = ["dep:serde", "ipnet/serde"]

[dependencies]
ipnet = { version = "2.9", optional = true }
serde = { workspace = true, optional = true }
