[package]
name = "showbiz-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
serde = ["dep:serde", "ipnet?/serde", "smallvec/serde"]
metrics = ["dep:metrics"]
rkyv = ["dep:rkyv"]

[dependencies]
ipnet = { version = "2.9", optional = true }
serde = { workspace = true, optional = true }
smallvec = { workspace = true, features = ["const_new"] }
metrics = { workspace = true, optional = true }
rkyv = { version = "0.7.43", optional = true, features = ["smallvec"] }