[package]
name = "memberlist-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
serde = ["dep:serde", "ipnet?/serde", "smallvec-wrapper/serde", "bytes/serde", "either/serde"]
metrics = ["dep:metrics"]
rkyv = ["dep:rkyv"]

[dependencies]
bytes.workspace = true
cheap-clone = "0.1"
either = "1"
thiserror.workspace = true

ipnet = { version = "2.9", optional = true }
serde = { workspace = true, optional = true }
smallvec-wrapper.workspace = true
metrics = { workspace = true, optional = true }
rkyv = { version = "0.7.43", optional = true, features = ["smallvec"] }
