[package]
name = "memberlist-net"
version = "0.8.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "memberlist's transport layer based on TCP and UDP."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["dns", "compression", "encryption"]

tokio = ["agnostic/tokio"]
smol = ["agnostic/smol"]

tcp = []
tls = ["dep:futures-rustls"]

compression = ["rayon"]
encryption = ["rayon", "memberlist-core/encryption"]

serde = [
  "memberlist-core/serde",
  "dep:serde",
  "indexmap/serde",
  "humantime-serde",
]

metrics = ["memberlist-core/metrics", "dep:metrics"]
test = [
  "memberlist-core/test",
  "smol_str",
  "dns", 
  "test-cert-gen",
  "parking_lot",
]

# enable DNS node address resolver
dns = ["nodecraft/dns"]
quic-ring = ["dns", "nodecraft/quic-ring"]
quic-aws-lc-rs = ["dns", "nodecraft/quic-aws-lc-rs"]
h3-ring = ["dns", "nodecraft/h3-ring"]
h3-aws-lc-rs = ["dns", "nodecraft/h3-aws-lc-rs"]
https-ring = ["dns", "nodecraft/https-ring"]
https-aws-lc-rs = ["dns", "nodecraft/https-aws-lc-rs"]
tls-ring = ["dns", "nodecraft/tls-ring"]
tls-aws-lc-rs = ["dns", "nodecraft/tls-aws-lc-rs"]
webpki-roots = ["dns", "nodecraft/webpki-roots"]
rustls-platform-verifier = ["dns", "nodecraft/rustls-platform-verifier"]
dnssec-ring = ["dns", "nodecraft/dnssec-ring"]
dnssec-aws-lc-rs = ["dns", "nodecraft/dnssec-aws-lc-rs"]

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom.workspace = true

[dependencies]
atomic_refcell.workspace = true
agnostic.workspace = true
async-channel.workspace = true
async-lock.workspace = true
bytes.workspace = true
byteorder.workspace = true
crc32fast = "1"
either.workspace = true
futures = { workspace = true, features = ["bilock", "unstable"] }
indexmap.workspace = true
getifs.workspace = true
nodecraft = { workspace = true, features = ["async", "resolver", "agnostic"] }
peekable = { workspace = true, features = ["future"] }
pin-project.workspace = true
rand = "0.9"
memberlist-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
viewit.workspace = true

# tls
futures-rustls = { version = "0.26", optional = true }

# compression & encryption
rayon = { version = "1.8", optional = true }

# serde
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }

# metrics
metrics = { workspace = true, optional = true }

# test
smol_str = { workspace = true, optional = true }
test-cert-gen = { version = "0.9", optional = true }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
agnostic = { workspace = true, features = ["net"] }
memberlist-core = { workspace = true, features = ["test"] }
smol_str.workspace = true
tokio = { version = "1", features = ["full", "tracing"] }
test-cert-gen = { version = "0.9" }
paste.workspace = true
parking_lot = "0.12"
