[package]
name = "memberlist-quic"
version = "0.8.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "memberlist's transport layer based on QUIC"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["compression", "quinn"]
compression = ["rayon", "weezl"]
# encryption feature enables nothing, because of quic is secure by default, this feature only for adapt to other transport layer
encryption = ["memberlist-core/encryption"]
quinn = ["agnostic/quinn", "dep:quinn", "agnostic/net", "rustls"]
serde = ["memberlist-core/serde", "dep:serde", "humantime-serde", "indexmap/serde"]
metrics = ["memberlist-core/metrics", "dep:metrics"]

tokio = ["agnostic/tokio"]
smol = ["agnostic/smol"]

# enable DNS node address resolver
dns = ["nodecraft/dns", "agnostic/dns"]
quic-ring = ["dns", "nodecraft/quic-ring", "agnostic/quic-ring"]
quic-aws-lc-rs = ["dns", "nodecraft/quic-aws-lc-rs", "agnostic/quic-aws-lc-rs"]
h3-ring = ["dns", "nodecraft/h3-ring", "agnostic/h3-ring"]
h3-aws-lc-rs = ["dns", "nodecraft/h3-aws-lc-rs", "agnostic/h3-aws-lc-rs"]
https-ring = ["dns", "nodecraft/https-ring", "agnostic/https-ring"]
https-aws-lc-rs = ["dns", "nodecraft/https-aws-lc-rs", "agnostic/https-aws-lc-rs"]
tls-ring = ["dns", "nodecraft/tls-ring", "agnostic/tls-ring"]
tls-aws-lc-rs = ["dns", "nodecraft/tls-aws-lc-rs", "agnostic/tls-aws-lc-rs"]
webpki-roots = ["dns", "nodecraft/webpki-roots", "agnostic/webpki-roots"]
rustls-platform-verifier = ["dns", "nodecraft/rustls-platform-verifier", "agnostic/rustls-platform-verifier"]
dnssec-ring = ["dns", "nodecraft/dnssec-ring", "agnostic/dnssec-ring"]
dnssec-aws-lc-rs = ["dns", "nodecraft/dnssec-aws-lc-rs", "agnostic/dnssec-aws-lc-rs"]

# enable test feature
test = ["memberlist-core/test", "rcgen"]

[dependencies]
auto_impl.workspace = true
atomic_refcell.workspace = true
agnostic-lite.workspace = true
agnostic = { workspace = true, optional = true }
async-channel.workspace = true
bytes.workspace = true
byteorder.workspace = true
crossbeam-skiplist = "0.1"
futures.workspace = true
indexmap = "2"
getifs.workspace = true
memberlist-core.workspace = true
nodecraft = { workspace = true, features = ["async", "resolver", "agnostic", "hostaddr"] }
pin-project.workspace = true
peekable = { workspace = true, features = ["future"] }
tracing.workspace = true
thiserror.workspace = true
smol_str.workspace = true
scopeguard.workspace = true
viewit.workspace = true

# serde
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }

# metrics
metrics = { workspace = true, optional = true }

# quinn
quinn = { version = "0.11", default-features = false, optional = true, features = ["futures-io", "rustls"] }
rustls = { version = "0.23", default-features = false, optional = true }

# test
rcgen = { version = "0.14", optional = true }

# compression
rayon = { version = "1.8", optional = true }
weezl = { version = "0.1", optional = true }

[dev-dependencies]
agnostic = { workspace = true, features = ["net"] }
memberlist-core = { workspace = true, features = ["test"] }
smol_str.workspace = true
tokio = { version = "1", features = ["full"] }
test-cert-gen = { version = "0.9" }
paste.workspace = true
